tests/invalid_programs/println3.jas
// Expect ')' after arguments.

println(42;
